src/pages/Profile/Profile.css
.profile {
  padding-top: 60px;
  display: grid;
  grid-template-columns: 1fr 2fr;
}

.profile__title {
  text-align: center;
  margin-bottom: 20px;
  margin-top: 0;
}

.profile__blogs {
  display: grid;
  grid-template-columns: repeat(2, 2fr);
  gap: 20px;
  justify-items: self-end;
  list-style-type: none;
  margin-left: 20px;
}

.profile__blog-card {
  background-color: white; /* White background for the blog card */
  margin: 10px 0; /* Space between blog cards */
  padding: 15px; /* Padding inside each card
     transition: box-shadow 0.3s; /* Smooth transition for shadow effect */
  width: 280px;
  border: 1px solid #ccc; /* Light border */
  border-radius: 10px; /* Slightly rounded corners */
  transition: box-shadow 0.3s; /* Smooth transition for shadow effect */
}

.profile__blog-card img {
  width: 100%;
}

.profile__blog-card:hover {
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Shadow effect on hover */
}

.home__blog-title {
  font-size: 1.5em; /* Size for the blog title */
  color: #007bff; /* Customize color */
  margin: 0 0 10px; /* Space below the title */
}

h1 {
  margin-bottom: 0;
}

.profile__sidebar {
  display: flex;
  flex-direction: column;
  align-items: start;
}

.sidebar__logout {
  font-size: 20px;
  line-height: 24px;
  font-weight: 700;
  cursor: pointer;
  top: 100px;
  flex-direction: row;
  font-family: Cabinet Grotesk;
  margin-left: 5px;
}
.sidebar__logout:hover {
  opacity: 0.5;
}

.sidebar__nav-item a {
  margin: 0;
  font-size: 20px;
  line-height: 12px;
  font-weight: 700;
  cursor: pointer;
  top: 100px;
  flex-direction: row;
  font-family: Cabinet Grotesk;
  margin-left: 5px;
  color: black;
  flex-direction: row;
}

.sidebar__nav-item a:hover {
  opacity: 0.5;
}

@media (max-width: 768px) {
  .profile__blogs {
    grid-template-columns: repeat(2, 1fr);
    list-style-type: none;
  }
  .profile__title {
    display: none;
  }
  .profile__blog-card {
    padding-left: 0;
  }
}

@media (max-width: 480px) {
  .profile__blogs {
    grid-template-columns: 1fr;
    margin-right: 60px;
  }
  .profile__title {
    display: none;
  }
  .profile {
    padding-top: 60px;
    display: grid;
    grid-template-columns: 1fr;
  }
  .profile__blog-card {
    background-color: white; /* White background for the blog card */
    margin: 10px 0; /* Space between blog cards */
    padding: 15px; /* Padding inside each card
     transition: box-shadow 0.3s; /* Smooth transition for shadow effect */
    border: 1px solid #ccc; /* Light border */
    border-radius: 10px; /* Slightly rounded corners */
    transition: box-shadow 0.3s; /* Smooth transition for shadow effect */
  }
}

